# YYDemoMini

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json  winCMakeRun.bat
androidProject/: .gitignore  build.gradle  cpSo.bat
androidProject/app/: build.gradle
androidProject/app/jks/: androidvrs.jks
androidProject/app/src/main/: AndroidManifest.xml
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/: Constants.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/appList/: MainActivity.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/foveation/: FoveationActivity.kt  FoveationGLSurfaceRender.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/general3DRover/: Gen3DJNIInterface.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/general3DRover/gaussianSplattingRover/: GaussianSplattingRoverActivity.kt  GaussianSplattingRoverGesture.kt  GaussianSplattingRoverJNICalls.kt  GaussianSplattingRoverRender.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/glSurfaceViewTests/: GaussianSplattingJniInterface.kt  JNISimpleGLInterface.kt
androidProject/app/src/main/java/com/example/yuyaolong/yyalDemo/lightCube/: IBLTestInterface.kt  JNIARInterface.kt  LightCubeActivity.kt  LightCubeGestureUtil.kt  LightCubeRender.kt  PBRTestInterface.kt
androidProject/app/src/main/res/layouts/hdrMultiThread/layout/: activity_hdr_multithread.xml  activity_hdr_multithread_animated.xml  simple_gl_activity_layout.xml
androidProject/app/src/main/res/layouts/listview/layout/: apps_layout.xml  hello_layout.xml
androidProject/app/src/main/res/layouts/memLayout/layout/: activity_mem_layout.xml
androidProject/app/src/main/res/layouts/touchUI/layout/: activity_general_3d_rover.xml
androidProject/app/src/main/res/layouts/vrsPerf/layout/: activity_vrs_perf.xml
androidProject/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
androidProject/app/src/main/shaders/: tri.frag  tri.vert
androidProject/gradle/wrapper/: gradle-wrapper.properties
assets/3DModels/plane/: plane.mtl
assets/plyFiles/: can.ply
assets/shaders/2D/: passthrough.fs  passthrough.vs  passthrough2DArray.fs  passthrough2DArraySubSampledLayout.fs  passthrough2DArraySubSampledLayout_es.fs  passthrough2DArray_es.fs  passthrough_es.fs  passthrough_es.vs
assets/shaders/3D/: box.fs  box.vs  deferred_shading.fs  deferred_shading.vs  gBuffer.fs  gBuffer.vs  model_loading_test.fs  model_loading_test.vs
assets/shaders/IBL/environmentMap/: environmentMap.fs  environmentMap.vs
assets/shaders/IBL/equirToCubeMap/: equirToCubeMap.fs
assets/shaders/IBL/irradianceMap/: irradianceMap.fs  irradianceMap.vs
assets/shaders/IBL/specularBRDFIntegrationMap/: specularBRDFIntegrationMap.fs  specularBRDFIntegrationMap.vs
assets/shaders/IBL/specularPrefilterMap/: specularPrefilterMap.fs
assets/shaders/gaussianSplat/: presortCompute.glsl  splat_frag.glsl  splat_geom.glsl  splat_vert.glsl
assets/shaders/pbr/: pbr.fs  pbr.vs
assets/shaders/phong/: phong.fs  phong.vs
cppsrc/apps/foveation/: CMakeLists.txt  JNIFoveationeSetting.cpp
cppsrc/apps/gaussianSplattingTest/: CMakeLists.txt  JNIGaussianSplattingTest.cpp
cppsrc/apps/iblCube/: CMakeLists.txt  iblCube.cpp
cppsrc/apps/winDeferShadingTest/: CMakeLists.txt  main.cpp
cppsrc/apps/winMainTest/: CMakeLists.txt  asyncLogger.h  main.cpp
cppsrc/cmake/: global.cmake  utils.cmake
cppsrc/cppModules/: YYGLModule.hpp  YYGLModule3D.hpp
cppsrc/cppModules/yyDeferredShading/: CMakeLists.txt  yyDeferredShading.cpp  yyDeferredShading.h
cppsrc/cppModules/yyGaussianSplatRender/: CMakeLists.txt  radix_sort.hpp  yyGaussianSplatRender.cpp  yyGaussianSplatRender.h
cppsrc/cppModules/yyModelRender/: CMakeLists.txt  yyModelRender.cpp  yyModelRender.h
cppsrc/cppModules/yySimpleDraw/: CMakeLists.txt  yySimpleDraw.cpp  yySimpleDraw.h
cppsrc/cppUtils/: CMakeLists.txt  YYBufferObject.cpp  YYBufferObject.h  YYGLCamera.cpp  YYGLCamera.h  YYGLModelData.cpp  YYLog.cpp  YYLog.h  YYPlatform.h  YYProgram.cpp  YYProgram.h  cppUtils.cpp  cppUtils.h  yyPlyParser.cpp  yyPlyParser.h
cppsrc/imgui/: CMakeLists.txt
cppsrc/modules/IBL/SH9Extract/: CMakeLists.txt  SH9Extract.cpp  SH9Extract.h
cppsrc/modules/IBL/environmentMap/: CMakeLists.txt  environmentMap.cpp  environmentMap.h
cppsrc/modules/IBL/equirToCubemap/: CMakeLists.txt  equirToCubemap.cpp  equirToCubemap.h
cppsrc/modules/IBL/irradianceMap/: CMakeLists.txt  irradianceMap.cpp  irradianceMap.h
cppsrc/modules/IBL/pbrRender/: CMakeLists.txt  pbrRender.cpp  pbrRender.h
cppsrc/modules/IBL/specularBRDFIntegrationMap/: CMakeLists.txt  specularBRDFIntegrationMap.cpp  specularBRDFIntegrationMap.h
cppsrc/modules/IBL/specularPrefilterMap/: CMakeLists.txt  specularPrefilterMap.cpp  specularPrefilterMap.h
cppsrc/modules/drawGrid/: CMakeLists.txt  drawGrid.cpp  drawGrid.h
cppsrc/modules/drawPoints/: CMakeLists.txt  drawPoints.cpp  drawPoints.h
cppsrc/modules/foveationByVRS/: CMakeLists.txt  foveationByVRS.cpp  foveationByVRS.h
cppsrc/modules/glCamera/: CMakeLists.txt  GLCamera.cpp  GLCamera.h
cppsrc/modules/heads/: YYGLModule.hpp
cppsrc/modules/miscUtils/: CMakeLists.txt  GRTSetting.cpp  GRTSetting.h  commonLog.h  lfsr_panel_1stcol.h  miscUtils.cpp  miscUtils.h  models.h
cppsrc/modules/qcomFoveation/: CMakeLists.txt  qcomFoveation.cpp  qcomFoveation.h
cppsrc/modules/showOnScreen/: CMakeLists.txt  showOnScreen.cpp  showOnScreen.h
cppsrc/modules/showOnScreenMultiview/: CMakeLists.txt  showOnScreenMultiview.cpp  showOnScreenMultiview.h
cppsrc/thirdPart/glm/: CMakeLists.txt
